avances de la clase

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,11 @@
 		<title><%= @title %></title>
 	</head>
   <body>
+
+  	<ul>
+   		<li><a href="/">Home</a></li>
+   		<li><a href="/posts/create">Nuevo Post</a></li>
+	</ul>
   	
     <%= yield %>
     
