--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,8 @@
-Hola mundo
+<ul>
+<% @posts.each do |post| %>
+ <li>
+   <h4><a href="/posts/<%= post.id %>"><%= post.title %></a></h4>
+   <p>Creado en: <%= post.created_at %></p>
+ </li>
+<% end %>
+</ul>
